Require Java-21 in equinox.launcher and built native binaries against 21